--- a/Exercicios/ex022/fundo006.html
+++ b/Exercicios/ex022/fundo006.html
@@ -7,16 +7,23 @@
     <style>
         body{
             height: 100vh;
-            background-color: black;
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+            background-size: cover;
+            /*background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center top;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;*/
+
+            /* SHORTHAND - BACKGROUND
+               color > image >Ç position > repeat > [size] > attachment
+            */
         }
 
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -27,7 +34,7 @@
 <body>
     <main>
         <h1>Teste</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt maiores sequi veritatis tempora dolorum quae id placeat ad minima laborum impedit obcaecati, rem suscipit nesciunt, maxime odit blanditiis atque omnis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores amet, maxime, provident ab esse consequatur tempore totam magni placeat unde, veniam beatae possimus quibusdam qui? Aperiam dolorum asperiores exercitationem numquam. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus, tempore! Facere, consequuntur quaerat? Deserunt nostrum omnis quis rerum sapiente quibusdam magnam reiciendis recusandae praesentium vel eius non, expedita tenetur iste!</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt maiores sequi veritatis tempora dolorum quae id placeat ad minima laborum impedit obcaecati, rem suscipit nesciunt, maxime odit blanditiis atque omnis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores amet, maxime, provident ab esse consequatur tempore totam magni placeat unde, veniam beatae possimus quibusdam qui? Aperiam dolorum asperiores exercitationem numquam. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus, tempore! Facere, consequuntur quaerat? Deserunt nostrum omnis quis rerum sapiente quibusdam magnam reiciendis recusandae praesentium vel eius non, expedita tenetur iste!Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt maiores sequi veritatis tempora dolorum quae id placeat ad minima laborum impedit obcaecati, rem suscipit nesciunt, maxime odit blanditiis atque omnis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores amet, maxime, provident ab esse consequatur tempore totam magni placeat unde, veniam beatae possimus quibusdam qui? Aperiam dolorum asperiores exercitationem numquam. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus, tempore! Facere, consequuntur quaerat? Deserunt nostrum omnis quis rerum sapiente quibusdam magnam reiciendis recusandae praesentium vel eius non, expedita tenetur isteLorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt maiores sequi veritatis tempora dolorum quae id placeat ad minima laborum impedit obcaecati, rem suscipit nesciunt, maxime odit blanditiis atque omnis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores amet, maxime, provident ab esse consequatur tempore totam magni placeat unde, veniam beatae possimus quibusdam qui? Aperiam dolorum asperiores exercitationem numquam. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus, tempore! Facere, consequuntur quaerat? Deserunt nostrum omnis quis rerum sapiente quibusdam magnam reiciendis recusandae praesentium vel eius non, expedita tenetur isteLorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt maiores sequi veritatis tempora dolorum quae id placeat ad minima laborum impedit obcaecati, rem suscipit nesciunt, maxime odit blanditiis atque omnis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores amet, maxime, provident ab esse consequatur tempore totam magni placeat unde, veniam beatae possimus quibusdam qui? Aperiam dolorum asperiores exercitationem numquam. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus, tempore! Facere, consequuntur quaerat? Deserunt nostrum omnis quis rerum sapiente quibusdam magnam reiciendis recusandae praesentium vel eius non, expedita tenetur isteLorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt maiores sequi veritatis tempora dolorum quae id placeat ad minima laborum impedit obcaecati, rem suscipit nesciunt, maxime odit blanditiis atque omnis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores amet, maxime, provident ab esse consequatur tempore totam magni placeat unde, veniam beatae possimus quibusdam qui? Aperiam dolorum asperiores exercitationem numquam. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus, tempore! Facere, consequuntur quaerat? Deserunt nostrum omnis quis rerum sapiente quibusdam magnam reiciendis recusandae praesentium vel eius non, expedita tenetur iste</p>
     </main>
 </body>
 </html>
